remove the green colour that makes peoples eyes bleed, fixes #61

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -115,9 +115,8 @@ dl.bank-details {
   padding-right: 3px;
 }
 
-
 table.tickets tr.paid {
-  color: #0f0;
+  font-weight: bold;
 }
 
 table.tickets tr.expired {
